# FistBump-AI

./: .gitignore  LICENSE  README.md  pyproject.toml  rocky_readme_project_hail_mary_edition.md
.claude/: settings.local.json
.github/workflows/: release.yml
rocky/: __init__.py  cli.py
rocky/parsers/: dlc_parser.py  onnx_parser.py
rocky/server/: chat.py  model_state.py  motifs.py  rest_api.py
rocky/ui/: index.html  package-lock.json  package.json  vite.config.ts
rocky/ui/src/: App.tsx  main.tsx
rocky/ui/src-tauri/: Cargo.toml  tauri.conf.json
rocky/ui/src-tauri/capabilities/: default.json
rocky/ui/src-tauri/src/: lib.rs  main.rs  secrets.rs
rocky/ui/src/components/: ChatPanel.tsx  GraphView.tsx  NodeInspector.tsx  RockyMascot.tsx  SettingsModal.tsx  Toolbar.tsx
rocky/ui/src/hooks/: useChat.ts  useModel.ts  useProviderConfig.ts  useSelectedNode.ts
rocky/ui/src/lib/: api.ts  providers.ts  secrets.ts
rocky/ui/src/styles/: rocky.css
scripts/: build_sidecar.py
tests/: test_mcp_tools.py  test_onnx_parser.py
