[project]
name = "rocky-ml"
version = "0.3.3"
description = "Rocky — model introspection desktop assistant"
requires-python = ">=3.10"

dependencies = [
    "onnx>=1.15.0",
    "numpy>=1.24.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
sidecar = ["pyinstaller>=6.0"]

[project.scripts]
rocky-backend = "rocky.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["rocky"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
