[package]
name = "rocky"
version = "0.3.4"
description = "Rocky — model introspection desktop assistant"
authors = ["Devansh"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rocky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
dirs = "5"
